finished week 3 lab + started week 4 work

--- a/week3/student_feedback/feeback.html
+++ b/week3/student_feedback/feeback.html
@@ -36,12 +36,12 @@
             <br>Are you a student?
 
             <div class="form-check">
-                <input class="form-check-input" name="is-student" id="is student" type="radio" checked="checked">
-                <label for="yes" class="form-check-label">Yes</label>
+                <input class="form-check-input" name="is-student" id="is-student-yes" type="radio" checked="checked">
+                <label for="is-student-yes" class="form-check-label">Yes</label>
             </div>
             <div class="form-check">
-                <input class="form-check-input" name="is-student" id="is-student" type="radio">
-                <label for="no" class="form-check-label">No</label>
+                <input class="form-check-input" name="is-student" id="is-student-no" type="radio">
+                <label for="is-student-no" class="form-check-label">No</label>
             </div>
 
             <input class="btn btn-primary mt-2" name="submit" id="submit" type="submit">
