finished tree order form

--- a/week5/tree_orders/tree_orders.html
+++ b/week5/tree_orders/tree_orders.html
@@ -56,11 +56,7 @@
 
     <h2>Order Summary</h2>
 
-    <p id="order-summary">
-        <!-- TODO Use JavaScript to display the order information, 
-            only if all the required information is entered  -->
-    </p>
-    
+    <p id="order-summary"></p>
 
 
 <script src="tree_orders.js"></script>
